Adapt to front-end